@@ -9,6 +9,7 @@ The items are sorted inversely, i.e. lastest items are on top
 --------------------------------------------------------------------------
 * remove ThreadLocal usage
 	THIS CHANGE IS NOT BACKWARDS COMPATIBLE, YOU MUST ADJUST YOUR CODE
+	- remove button urls for border, hide and close, is now delivered with library
 	- move from package com.exedio.cope.editor to com.exedio.cope.live
 	- the filter is now a separate class, you need to adjust your web.xml
 * bugfix: image preview did not work without cookies
